# rcb4

./: README.md  requirements.txt  setup.py
.github/workflows/: test.yml
rcb4/: __init__.py  armh7interface.py  asm.py  ctype_utils.py  rcb4interface.py  struct_header.py  units.py  usb_utils.py
rcb4/apps/: armh7_tool.py  write_firmware.py
rcb4/data/: __init__.py
ros/kxr_controller/: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.in  setup.py
ros/kxr_controller/action/: AdjustAngleVector.action  PressureControl.action
ros/kxr_controller/cfg/: KXRParameteres.cfg
ros/kxr_controller/include/kxr_controller/: kxr_robot_hardware.h
ros/kxr_controller/launch/: diff_drive_controller.launch  kxr_controller.launch  kxr_controller_for_wheel.launch  viewer.launch
ros/kxr_controller/launch/rviz/: viewer.rviz
ros/kxr_controller/msg/: PressureControl.msg  ServoOnOff.msg  Stretch.msg
ros/kxr_controller/node_scripts/: rcb4_ros_bridge.py
ros/kxr_controller/python/kxr_controller/: kxr_interface.py
ros/kxr_controller/scripts/: interface.py
ros/kxr_controller/src/: kxr_robot_hardware.cpp  kxr_ros_controller.cpp
ros/kxr_controller/test/: kxr_controller.test  test_kxr_controller.py
ros/kxr_models/: CMakeLists.txt  package.xml  setup.py
ros/kxr_models/config/: kxr_test_head_servo_config.yaml  kxrl2_servo_config.yaml  kxrl2l2a6h2m_servo_config.yaml  kxrmw4a6h2m_diff_drive_controller.yaml  kxrmw4a6h2m_servo_config.yaml
ros/kxr_models/meshes/kxrl2l2a6h2m/: HEAD_LINK0_mesh.dae  HEAD_LINK1_mesh.dae  LARM_LINK0_mesh.dae  LARM_LINK1_mesh.dae  LARM_LINK2_mesh.dae  LARM_LINK3_mesh.dae  LARM_LINK5_mesh.dae  LARM_LINK7_mesh.dae  LLEG_LINK0_mesh.dae  LLEG_LINK1_mesh.dae  RARM_LINK0_mesh.dae  RARM_LINK1_mesh.dae  RARM_LINK2_mesh.dae  RARM_LINK3_mesh.dae  RARM_LINK4_mesh.dae  RARM_LINK7_mesh.dae  RLEG_LINK0_mesh.dae  RLEG_LINK1_mesh.dae  bodyset94472077639384_mesh.dae
ros/kxr_models/meshes/kxrmw4a6h2m/: HEAD_LINK0_mesh.dae  HEAD_LINK1_mesh.dae  LARM_LINK0_mesh.dae  LARM_LINK1_mesh.dae  LARM_LINK2_mesh.dae  LARM_LINK3_mesh.dae  LARM_LINK4_mesh.dae  LARM_LINK6_mesh.dae  LLEG_LINK0_mesh.dae  LLEG_LINK1_mesh.dae  RARM_LINK0_mesh.dae  RARM_LINK1_mesh.dae  RARM_LINK2_mesh.dae  RARM_LINK3_mesh.dae  RARM_LINK5_mesh.dae  RARM_LINK6_mesh.dae  RARM_LINK7_mesh.dae  RLEG_LINK0_mesh.dae  RLEG_LINK1_mesh.dae  bodyset94855827795112_mesh.dae
ros/kxr_models/node_scripts/: http_server_node.py  urdf_model_server.py
ros/kxr_models/python/kxr_models/: download_urdf.py  ip.py  path.py  ros.py  urdf.py
ros/kxr_models/scripts/: get_urdf_model.py
ros/kxr_models/urdf/: kxr_test_head.urdf  kxrl2l2a6h2m.urdf  kxrmw4a6h2m.urdf
ros/kxreus/: CMakeLists.txt  package.xml  requirements.in
ros/kxreus/config/: kxrl2l2a6h2m.yaml
ros/kxreus/euslisp/: kxr-interface.l
ros/kxreus/launch/: eusmodel_server.launch
ros/kxreus/node_scripts/: eus_model_server.py  http_server_node.py
ros/kxreus/test/: kxreus-test.l  kxreus.test
tests/rcb4_tests/: test_armh7interface.py  test_rcb4interface.py
