<package format="3">

  <name>kxreus</name>
  <version>0.0.1</version>
  <description>
    roseus interface for kxr robots.
  </description>

  <license>MIT</license>
  <maintainer email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</maintainer>
  <author email="yanokura@jsk.imi.i.u-tokyo.ac.jp">Iori Yanokura</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>

  <!-- ALPHABETICAL ORDER -->
  <build_depend>kxr_controller</build_depend>
  <build_depend>kxr_models</build_depend>
  <!-- ALPHABETICAL ORDER -->

  <!-- ALPHABETICAL ORDER -->
  <build_depend>kxr_controller</build_depend>
  <build_depend>kxr_models</build_depend>
  <build_depend>pr2eus</build_depend>
  <build_depend>roseus</build_depend>
  <!-- ALPHABETICAL ORDER -->

  <export>
    <pip_requirements>requirements.txt</pip_requirements>
  </export>

</package>
